Added title in index

--- a/html/ChatInputHTML.html
+++ b/html/ChatInputHTML.html
@@ -21,6 +21,8 @@
 
 
 <script>
+
+    //copy and paste function 
     function myFunction() {
         /* Get the text field */
         var copyText = document.getElementById("myInput");
