--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,7 @@
   <!-- Link to the api keys for your firebase project -->
   <script src="../js/firebaseAPI.js"></script>
 
-  <title>Document</title>
+  <title>NOMO</title>
 </head>
 
 <body>
