Made the basic javascript layout

--- a/html/firstPageTest.html
+++ b/html/firstPageTest.html
@@ -6,11 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
 </head>
 
+
+
 <body>
-    <button> Personal </button>
-    <button> Business </button>
+    <button onclick="personalSelected()">
+        <a href="secondPageTest.html?personal"> Personal
+        </a>
+    </button>
+    <button onclick="businessSelected()">
+        <a href="secondPageTest.html?business"> Business
+        </a>
+    </button>
 </body>
+
+<script src="/js/firstPage.js"></script>
 
 </html>
