--- a/html/secondPageTest.html
+++ b/html/secondPageTest.html
@@ -9,7 +9,14 @@
 </head>
 
 <body>
-
+    <a id="first"><button id="firstButton"></button></a>
+    <a id="second"><button id="secondButton"></button></a>
+    <a id="third"><button id="thirdButton"></button></a>
+    <a id="fourth"><button id="fourthButton"></button></a>
+    <a id="fifth"><button id="fifthButton"></button></a>
 </body>
+
+
+<script src="/js/secondPage.js"></script>
 
 </html>
