--- a/html/thirdPageTest.html
+++ b/html/thirdPageTest.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-
+    <a href="ChatInputHTML.html"><button> Sample choice 1 </button></a>
+    <a href="ChatInputHTML.html"><button> Sample choice 2 </button></a>
+    <a href="ChatInputHTML.html"><button> Sample choice 3 </button></a>
 </body>
 
 </html>
