--- a/html/firstPageTest.html
+++ b/html/firstPageTest.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>nomo</title>
     <link rel="stylesheet" href="../css/firstPage.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round">
 </head>
@@ -41,8 +41,8 @@
     </div>
 
 
+    <script src="../js/firstPage.js"></script>
 </body>
 
-<script src="../js/firstPage.js"></script>
 
 </html>
