--- a/html/thirdPageTest.html
+++ b/html/thirdPageTest.html
@@ -9,9 +9,7 @@
 </head>
 
 <body>
-    <a href="ChatInputHTML.html"><button> Sample choice 1 </button></a>
-    <a href="ChatInputHTML.html"><button> Sample choice 2 </button></a>
-    <a href="ChatInputHTML.html"><button> Sample choice 3 </button></a>
+    <a href="ChatInput.html"><button> Sample choice</button></a>
 </body>
 
 </html>
