--- a/html/thirdPageTest.html
+++ b/html/thirdPageTest.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+    <link rel="stylesheet" href="/css/thirdPage.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round">
+  </head>
 
-<body>
-    <a href="ChatInputHTML.html"><button> Sample choice 1 </button></a>
-    <a href="ChatInputHTML.html"><button> Sample choice 2 </button></a>
-    <a href="ChatInputHTML.html"><button> Sample choice 3 </button></a>
-</body>
+  <body>
+    <div class="mainbody">
+      <div class="navbar">
+        <div class="name"><a class="logo" href="">nomo</a></div>
+        <div class="login">
+          <a href=""> <span class="material-icons-round"> person </span></a>
+        </div>
+      </div>
 
+      
+
+      <a href="ChatInputHTML.html"><button>Sample choice 1</button></a>
+      <a href="ChatInputHTML.html"><button>Sample choice 1</button></a>
+      <a href="ChatInputHTML.html"><button>Sample choice 1</button></a>
+      <a href="ChatInputHTML.html"><button>Sample choice 1</button></a>
+      <a href="ChatInputHTML.html"><button>Sample choice 1</button></a>
+      
+    </div>
+  </body>
 </html>
