--- a/html/secondPageTest.html
+++ b/html/secondPageTest.html
@@ -5,18 +5,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="../css/secondPage.css">
+    <title>Category</title>
 </head>
 
 <body>
-    <a id="first"><button id="firstButton"></button></a>
-    <a id="second"><button id="secondButton"></button></a>
-    <a id="third"><button id="thirdButton"></button></a>
-    <a id="fourth"><button id="fourthButton"></button></a>
-    <a id="fifth"><button id="fifthButton"></button></a>
+    <div class="container">
+        <div class="navbar">
+            <div class="name"><a class="logo" href="">nomo</a> </div>
+            <div class="login"><a href=""> <span class="material-icons-round">
+                        person
+                    </span></a>
+            </div>
+        </div>
+        <div id="headingDiv">
+            <h2 id="CategoryHeading">CATEGORY</h2>
+        </div>
+        <div id="categories">
+            <a id="first"><button id="firstButton"></button></a>
+            <a id="second"><button id="secondButton"></button></a>
+            <a id="third"><button id="thirdButton"></button></a>
+            <a id="fourth"><button id="fourthButton"></button></a>
+            <a id="fifth"><button id="fifthButton"></button></a>
+        </div>
+
+    </div>
+    <script src="../js/secondPage.js"></script>
 </body>
 
 
-<script src="/js/secondPage.js"></script>
 
 </html>
