edited first and copy pages, jason

--- a/html/firstPageTest.html
+++ b/html/firstPageTest.html
@@ -29,11 +29,11 @@
             </div>
             <div class="buttons">
                 <button class="b1" onclick="personalSelected()">
-                    <a href="secondPageTest.html?personal"> Personal
+                    <a href="secondPageTest.html?personal"> personal
                     </a>
                 </button>
                 <button class="b2" onclick="businessSelected()">
-                    <a href="secondPageTest.html?business"> Business
+                    <a href="secondPageTest.html?business"> business
                     </a>
                 </button>
             </div>
