--- a/html/ChatInputHTML.html
+++ b/html/ChatInputHTML.html
@@ -6,22 +6,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../css/copypage.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round">
 </head>
 
 <body>
-    <!-- The text field -->
-    <input type="text" value="Hello World" id="myInput">
+    <div class="mainbody">
+        <div class="navbar">
+            <div class="one" onclick="history.back(-1)">
+                <span class="material-icons-round">
+                    arrow_back_ios
+                </span>
+            </div>
+            <div class="name"><a class="logo" href="./firstPageTest.html">nomo</a> </div>
+            <div class="login"><a href=""> <span class="material-icons-round">
+                        person
+                    </span></a>
+            </div>
+        </div>
+        <!-- The text field -->
+        <input type="text" value="Hello World" id="myInput">
 
-    <!-- The button used to copy the text -->
-    <button onclick="myFunction()">Copy text</button>
 
+
+        <!-- The button used to copy the text -->
+        <button onclick="myFunction()">Copy text</button>
+    </div>
 </body>
 
 </html>
 
 
 <script>
-
     //copy and paste function 
     function myFunction() {
         /* Get the text field */
