--- a/html/loginPage.html
+++ b/html/loginPage.html
@@ -11,16 +11,6 @@
     <link rel="stylesheet" href="../css/login.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round">
     <link rel="stylesheet" href="https://getbootstrap.com/docs/5.1/examples/sign-in" />
-
-    <!-- Firebase 8 CDNs-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
-
-
-    <script src="/js/firebaseAPI.js"></script>
 </head>
 
 <body>
@@ -37,14 +27,14 @@
                                 <p class=" mb-5" id="subtitle">Please enter your login!</p>
 
                                 <div class="form-outline form-white mb-4 text" style="color: black">
-                                    <input type="email" id="typeEmailX" class="form-control form-control-lg text" />
+                                    <input type="email" id="typeEmailX" class="form-control form-control-lg" />
                                     <label for="typeEmailX">
                                         <p class="labelText">Email</p>
                                     </label>
                                 </div>
 
                                 <div style="color: black">
-                                    <input type="password" id="typePasswordX" class="form-control text" />
+                                    <input type="password" id="typePasswordX" class="form-control" />
                                     <label for="typePasswordX">
                                         <p class="labelText">Password</p>
                                     </label>
