Changed the login page design and login page works now

--- a/html/thirdPageTest.html
+++ b/html/thirdPageTest.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="/css/thirdPage.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons+Round"
-    />
-  </head>
 
-  <body>
-    <div class="mainbody">
-      <div class="navbar">
-        <div class="name"><a class="logo" href="">nomo</a></div>
-        <div class="login">
-          <a href=""> <span class="material-icons-round"> person </span></a>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="/css/thirdPage.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" />
+</head>
+
+<body>
+  <div class="mainbody">
+    <div class="navbar">
+      <div class="name"><a class="logo" href="">nomo</a></div>
+      <div class="login">
+        <a href=""> <span class="material-icons-round"> person </span></a>
       </div>
-
-      <a href="ChatInput.html"><button>Sample choice</button></a>
     </div>
-  </body>
+
+    <a href="ChatInput.html"><button>Sample choice</button></a>
+  </div>
+</body>
+
 </html>
