--- a/html/loginPage.html
+++ b/html/loginPage.html
@@ -1,63 +1,108 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../css/login.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round">
-    <link rel="stylesheet" href="https://getbootstrap.com/docs/5.1/examples/sign-in" />
+    <meta charset="utf-8">
+    <title>My BCIT Project</title>
+    <meta name="comp1800 template" content="my bcit Hiking App project">
+
+    <link rel="stylesheet" href="/css/login.css">
+    <!-- Bootstrap FirebaseUI CSS -->
+    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
+
+    <!-- Firebase 8 CDNs-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
+        </script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+
+
+    <!-- Link to the api keys for your firebase project -->
+    <script src="../js/firebaseAPI.js"></script>
 </head>
 
 <body>
-    <section>
-        <div class="container py-5 h-100">
-            <div class="row d-flex justify-content-center align-items-center h-100">
-                <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-                    <div class="card text-white" style="border-radius: 1rem; background-color: white; border: none">
-                        <div class=" card-body p-5 text-center">
 
-                            <div class="mb-md-5 mt-md-4 pb-5">
+    <!-------------------------------------->
+    <!-- The following is HTML for layout -->
+    <!-------------------------------------->
 
-                                <h2>nomo</h2>
-                                <p class=" mb-5" id="subtitle">Please enter your login!</p>
+    <div id="formBox">
 
-                                <div class="form-outline form-white mb-4 text" style="color: black">
-                                    <input type="email" id="typeEmailX" class="form-control form-control-lg" />
-                                    <label for="typeEmailX">
-                                        <p class="labelText">Email</p>
-                                    </label>
-                                </div>
+        <h2>nomo</h2>
 
-                                <div style="color: black">
-                                    <input type="password" id="typePasswordX" class="form-control" />
-                                    <label for="typePasswordX">
-                                        <p class="labelText">Password</p>
-                                    </label>
-                                </div>
+        <br>
+        <br>
+        <br>
+        <div id="firebaseui-auth-container"></div>
+        <div id="loader">Loading...</div>
 
-                                <br>
-                                <br>
+    </div>
 
-                                <button type="submit">Login</button>
+    <!--------------------------------------------------------------------->
+    <!-- JS files: Your own JavaScript functions included here    -->
+    <!--------------------------------------------------------------------->
 
-                            </div>
+    <script>
+        var ui = new firebaseui.auth.AuthUI(firebase.auth());
+        var uiConfig = {
+            callbacks: {
+                signInSuccessWithAuthResult: function (authResult, redirectUrl) {
+                    // User successfully signed in.
+                    // Return type determines whether we continue the redirect automatically
+                    // or whether we leave that to developer to handle.
+                    //------------------------------------------------------------------------------------------
+                    // The code below is modified from default snippet provided by the FB documentation.
+                    //
+                    // If the user is a "brand new" user, then create a new "user" in your own database.
+                    // Assign this user with the name and email provided.
+                    // Before this works, you must enable "Firestore" from the firebase console.
+                    // The Firestore rules must allow the user to write. 
+                    //------------------------------------------------------------------------------------------
+                    var user = authResult.user;                            // get the user object from the Firebase authentication database
+                    if (authResult.additionalUserInfo.isNewUser) {         //if new user
+                        db.collection("users").doc(user.uid).set({         //write to firestore. We are using the UID for the ID in users collection
+                            name: user.displayName,                    //"users" collection
+                            email: user.email                          //with authenticated user's ID (user.uid)
+                        }).then(function () {
+                            console.log("New user added to firestore");
+                            window.location.assign("firstPageTest.html");       //re-direct to main.html after signup
+                        })
+                            .catch(function (error) {
+                                console.log("Error adding new user: " + error);
+                            });
+                    } else {
+                        return true;
+                    }
+                    return false;
+                },
+                uiShown: function () {
+                    // The widget is rendered.
+                    // Hide the loader.
+                    document.getElementById('loader').style.display = 'none';
+                }
+            },
+            // Will use popup for IDP Providers sign-in flow instead of the default, redirect.
+            signInFlow: 'popup',
+            signInSuccessUrl: 'firstPageTest.html',
+            signInOptions: [
+                firebase.auth.EmailAuthProvider.PROVIDER_ID,
 
-                            <div>
-                                <p style="margin-top: -2em">Don't have an account? <a href="#!" class="fw-bold">Sign
-                                        Up</a></p>
-                            </div>
+            ],
 
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+        };
+        // The start method will wait until the DOM is loaded.
+        ui.start('#firebaseui-auth-container', uiConfig);
+
+
+    </script>
+
 </body>
 
 </html>
