added first second third fourth page html and css and second page js, jason

--- a/html/firstPageTest.html
+++ b/html/firstPageTest.html
@@ -22,10 +22,10 @@
 
         <div class="content">
             <div class="text t1">
-                effective replies for any situation, making declining stress-free
+                Effective replies for any situation, making declining stress-free
             </div>
             <div class="text t2">
-                what type of response do you need today?
+                What type of response do you need today?
             </div>
             <div class="buttons">
                 <button class="b1" onclick="personalSelected()">
