--- a/html/thirdPageTest.html
+++ b/html/thirdPageTest.html
@@ -13,15 +13,23 @@
   </head>
 
   <body>
-    <div class="mainbody">
+    <div class="container">
       <div class="navbar">
-        <div class="name"><a class="logo" href="">nomo</a></div>
-        <div class="login">
-          <a href=""> <span class="material-icons-round"> person </span></a>
+        <div class="one" onclick="history.back(-1)">
+            <span class="material-icons-round">
+                arrow_back_ios
+            </span>
         </div>
-      </div>
-
+        <div class="name"><a class="logo" href="./firstPageTest.html">nomo</a> </div>
+        <div class="login"><a href=""> <span class="material-icons-round">
+                    person
+                </span></a>
+        </div>
+    </div>
+    <div class="copy">
       <a href="ChatInput.html"><button>Sample choice</button></a>
+    </div>
+      
     </div>
   </body>
 </html>
