--- a/html/ChatInput.html
+++ b/html/ChatInput.html
@@ -24,13 +24,19 @@
                     </span></a>
             </div>
         </div>
-        <!-- The text field -->
-        <input type="text" value="Hello World" id="myInput">
+        <div class="copybox">
+            <div class="input-box">
+                <!-- The text field -->
+                <textarea id="myInput">hello Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit sapiente vitae unde cum repellendus ab reprehenderit officia nulla, exercitationem, odio dolores qui modi commodi enim sequi culpa quia aspernatur quaerat neque error ullam delectus voluptates mollitia maxime? Quam inventore reiciendis expedita, molestiae explicabo facere quos voluptates non quis quia ut.
+                    </textarea>
 
+            </div>
 
-
-        <!-- The button used to copy the text -->
-        <button onclick="myFunction()">Copy text</button>
+            <div class="copybutton">
+                <!-- The button used to copy the text -->
+                <button onclick="myFunction()">copy to clipboard</button>
+            </div>
+        </div>
     </div>
 </body>
 
@@ -51,6 +57,7 @@
         navigator.clipboard.writeText(copyText.value);
 
         /* Alert the copied text */
-        alert("Copied the text: " + copyText.value);
+        alert("Copied to clipboard!");
+        //  + copyText.value
     }
 </script>
