--- a/html/loginPage.html
+++ b/html/loginPage.html
@@ -3,8 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>My BCIT Project</title>
-    <meta name="comp1800 template" content="my bcit Hiking App project">
+    <title>Login</title>
 
     <link rel="stylesheet" href="/css/login.css">
     <!-- Bootstrap FirebaseUI CSS -->
@@ -22,21 +21,27 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
     <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
 
-
     <!-- Link to the api keys for your firebase project -->
     <script src="../js/firebaseAPI.js"></script>
+    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round">
 </head>
 
 <body>
 
-    <!-------------------------------------->
-    <!-- The following is HTML for layout -->
-    <!-------------------------------------->
+    <!--navbar-->
+    <div class="navbar">
+        <div class="one" onclick="history.back(-1)"></div>
+        <div class="name"><a class="logo" href="./firstPageTest.html">nomo</a> </div>
+        <div class="login"><a href=""> <span class="material-icons-round">
+                    person
+                </span></a>
+        </div>
+    </div>
 
+    <!--login box-->
     <div id="formBox">
-
-        <h2>nomo</h2>
-
+        <br>
         <br>
         <br>
         <br>
@@ -99,7 +104,6 @@
         };
         // The start method will wait until the DOM is loaded.
         ui.start('#firebaseui-auth-container', uiConfig);
-
 
     </script>
 
