first second third page css edit

--- a/html/firstPageTest.html
+++ b/html/firstPageTest.html
@@ -28,14 +28,10 @@
                 what type of response do you need today?
             </div>
             <div class="buttons">
-                <button class="b1" onclick="personalSelected()">
-                    <a href="secondPageTest.html?personal"> Personal
-                    </a>
-                </button>
-                <button class="b2" onclick="businessSelected()">
-                    <a href="secondPageTest.html?business"> Business
-                    </a>
-                </button>
+                <a class="b1" href="secondPageTest.html?personal" onclick="personalSelected()"> Personal
+                </a>
+                <a class="b2" href="secondPageTest.html?business" onclick="businessSelected()"> Business
+                </a>
             </div>
         </div>
     </div>
