edited all pages html and css

--- a/html/ChatInput.html
+++ b/html/ChatInput.html
@@ -31,13 +31,13 @@
     <div class="mainbody">
       <div class="navbar">
         <div class="one" onclick="history.back(-1)">
-          <span class="material-icons-round"> arrow_back_ios </span>
+          <span class="material-icons-round t1"> arrow_back_ios </span>
         </div>
         <div class="name">
           <a class="logo" href="./firstPageTest.html">nomo</a>
         </div>
         <div class="login">
-          <a href=""> <span class="material-icons-round"> person </span></a>
+          <a href=""> <span class="material-icons-round t1"> person </span></a>
         </div>
       </div>
       <div class="copybox">
