--- a/html/firstPageTest.html
+++ b/html/firstPageTest.html
@@ -14,17 +14,17 @@
     <div class="mainbody">
         <div class="navbar">
             <div class="name"><a class="logo" href="">nomo</a> </div>
-            <div class="login"><a href=""> <span class="material-icons-round">
+            <div class="login"><a href=""> <span class="material-icons-round t1">
                         person
                     </span></a>
             </div>
         </div>
 
         <div class="content">
-            <div class="text t1">
+            <div class="text t2">
                 effective replies for any situation, making declining stress-free
             </div>
-            <div class="text t2">
+            <div class="text t3">
                 what type of response do you need today?
             </div>
             <div class="buttons">
