--- a/html/secondPageTest.html
+++ b/html/secondPageTest.html
@@ -15,14 +15,19 @@
     <div class="container">
         <div class="navbar">
             <div class="one" onclick="history.back(-1)">
-                <span class="material-icons-round">
+                <span class="material-icons-round t1">
                     arrow_back_ios
                 </span>
             </div>
-            <div class="name"><a class="logo" href="./firstPageTest.html">nomo</a> </div>
-            <div class="login"><a href=""> <span class="material-icons-round">
+            <div class="name">
+                <a class="logo" href="./firstPageTest.html">nomo</a>
+            </div>
+            <div class="login">
+                <a href="">
+                    <span class="material-icons-round t1">
                         person
-                    </span></a>
+                    </span>
+                </a>
             </div>
         </div>
         <div id="headingDiv">
