--- a/html/thirdPageTest.html
+++ b/html/thirdPageTest.html
@@ -27,16 +27,22 @@
   <div class="container" id="bodyDiv">
     <div class="navbar">
       <div class="one" onclick="history.back(-1)">
-        <span class="material-icons-round"> arrow_back_ios </span>
+        <span class="material-icons-round t1">
+          arrow_back_ios
+        </span>
       </div>
       <div class="name">
         <a class="logo" href="./firstPageTest.html">nomo</a>
       </div>
       <div class="login">
-        <a href=""> <span class="material-icons-round"> person </span></a>
+        <a href="">
+          <span class="material-icons-round t1">
+            person
+          </span>
+        </a>
       </div>
-
     </div>
+
     <div class="generatedbuttons">
       <div id="quoteButton" style="display: none" onclick="storeQuote(this)">
         <a href="#"><button id="reply">Sample choice</button></a>
@@ -44,6 +50,7 @@
       <div id="newButtons"></div>
     </div>
   </div>
+  
   <script src="../js/thirdPage.js"></script>
   <script>
     window.onload = (event) => {
