changed navbar type and color

--- a/html/firstPageTest.html
+++ b/html/firstPageTest.html
@@ -14,7 +14,7 @@
     <div class="mainbody">
         <div class="navbar">
             <div class="name"><a class="logo" href="">nomo</a> </div>
-            <div class="login"><a href=""> <span class="material-icons-round t1">
+            <div class="login"><a href=""> <span class="material-icons-round t1" id="new">
                         person
                     </span></a>
             </div>
