changed font size and opacity of navbar

--- a/html/secondPageTest.html
+++ b/html/secondPageTest.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="navbar">
             <div class="one" onclick="history.back(-1)">
-                <span class="material-icons-round t1">
+                <span class="material-icons-round t1" id="new2">
                     arrow_back_ios
                 </span>
             </div>
@@ -24,7 +24,7 @@
             </div>
             <div class="login">
                 <a href="">
-                    <span class="material-icons-round t1">
+                    <span class="material-icons-round t1" id="new">
                         person
                     </span>
                 </a>
