--- a/html/thirdPageTest.html
+++ b/html/thirdPageTest.html
@@ -27,7 +27,7 @@
   <div class="container" id="bodyDiv">
     <div class="navbar">
       <div class="one" onclick="history.back(-1)">
-        <span class="material-icons-round t1">
+        <span class="material-icons-round t1" id="new2">
           arrow_back_ios
         </span>
       </div>
@@ -36,7 +36,7 @@
       </div>
       <div class="login">
         <a href="">
-          <span class="material-icons-round t1">
+          <span class="material-icons-round t1" id="new">
             person
           </span>
         </a>
@@ -50,7 +50,7 @@
       <div id="newButtons"></div>
     </div>
   </div>
-  
+
   <script src="../js/thirdPage.js"></script>
   <script>
     window.onload = (event) => {
