edited the copy button on chatinput

--- a/html/ChatInput.html
+++ b/html/ChatInput.html
@@ -48,20 +48,15 @@
 
         <div class="copybutton">
           <!-- The button used to copy the text -->
-          <button onclick="myFunction()">copy to clipboard</button>
+          <a class="b1" onclick="myFunction()">Copy to Clipboard</a>
+          <!-- <button onclick="myFunction()">copy to clipboard</button> -->
         </div>
 
-        <div class="buttons">
-          <a class="b1" href="secondPageTest.html?personal" onclick="personalSelected()"> Personal
-          </a>
-          <a class="b2" href="secondPageTest.html?business" onclick="businessSelected()"> Business
-          </a>
       </div>
-      
+
     </div>
     <script src="/js/ChatInput.js"></script>
   </body>
-</html>
 
 <script>
   window.onload = (event) => {
