--- a/html/firstPageTest.html
+++ b/html/firstPageTest.html
@@ -36,6 +36,18 @@
         </div>
     </div>
 
+    
+    <footer class="footer-basic">
+        <ul class="list-inline">
+            <li class="list-inline-item"><a href="./main.html">Home</a></li>
+            <li class="list-inline-item"><a href="#">Features</a></li>
+            <li class="list-inline-item"><a href="#">FAQs</a></li>
+            <li class="list-inline-item"><a href="#">About</a></li>
+            <li class="list-inline-item"></li>
+        </ul>
+        <p class="copyright">nomo © 2021</p>
+    </footer>
+
 
     <script src="../js/firstPage.js"></script>
 </body>
