--- a/html/ChatInput.html
+++ b/html/ChatInput.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Edit</title>
     <link rel="stylesheet" href="../css/copypage.css" />
     <link
       rel="stylesheet"
@@ -61,7 +61,12 @@
 <script>
   window.onload = (event) => {
     fillText();
+    biggerSize();
   };
+
+  function biggerSize(){
+    document.getElementById("myInput").style.fontSize= "x-large";
+  }
 
   //copy and paste function
   function myFunction() {
