--- a/html/secondPageTest.html
+++ b/html/secondPageTest.html
@@ -32,7 +32,7 @@
         </div>
         <div id="headingDiv">
             <br>
-            <h2 id="CategoryHeading">CATEGORY</h2>
+            <p id="CategoryHeading">CATEGORY</p>
             <br><br>
         </div>
         <div id="categories">
