--- a/html/thirdPageTest.html
+++ b/html/thirdPageTest.html
@@ -42,7 +42,11 @@
         </a>
       </div>
     </div>
-
+    <div id="headingDiv">
+      <br>
+      <span id="CategoryHeading">CATEGORY</span><span> > </span>
+      <span id="SubCategoryHeading">SUBCATEGORY</span>
+    </div>
     <div class="generatedbuttons">
       <div id="quoteButton" style="display: none" onclick="storeQuote(this)">
         <a href="#"><button id="reply">Sample choice</button></a>
