added footer on first page

--- a/html/firstPageTest.html
+++ b/html/firstPageTest.html
@@ -8,6 +8,9 @@
     <title>nomo</title>
     <link rel="stylesheet" href="../css/firstPage.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round">
+
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
@@ -33,20 +36,21 @@
                 <a class="b2" href="secondPageTest.html?business" onclick="businessSelected()"> Business
                 </a>
             </div>
+
         </div>
+
+        <footer>
+            <div >
+                <i class="fa fa-twitter"></i>
+                <i class="fa fa-facebook"></i>
+                <a href="https://www.one-tab.com/page/gPCLa4TASCinNOgMbaDEaQ" target ="blank"><i style = "font-size: 0.9em" class="fa fa-users"></i></a>             
+            </div>
+            
+            <p class="copyright"> nomo © 2021</p>
+        </footer>
     </div>
 
-    
-    <footer class="footer-basic">
-        <ul class="list-inline">
-            <li class="list-inline-item"><a href="./main.html">Home</a></li>
-            <li class="list-inline-item"><a href="#">Features</a></li>
-            <li class="list-inline-item"><a href="#">FAQs</a></li>
-            <li class="list-inline-item"><a href="#">About</a></li>
-            <li class="list-inline-item"></li>
-        </ul>
-        <p class="copyright">nomo © 2021</p>
-    </footer>
+
 
 
     <script src="../js/firstPage.js"></script>
