Added profile link to all pages

--- a/html/secondPageTest.html
+++ b/html/secondPageTest.html
@@ -23,7 +23,7 @@
                 <a class="logo" href="./firstPageTest.html">nomo</a>
             </div>
             <div class="login">
-                <a href="">
+                <a href="profile.html">
                     <span class="material-icons-round t1" id="new">
                         person
                     </span>
