--- a/html/firstPageTest.html
+++ b/html/firstPageTest.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/firstPage.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round">
 
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
 </head>
 
@@ -17,7 +17,7 @@
     <div class="mainbody">
         <div class="navbar">
             <div class="name"><a class="logo" href="">nomo</a> </div>
-            <div class="login"><a href=""> <span class="material-icons-round t1" id="new">
+            <div class="login"><a href="profile.html"> <span class="material-icons-round t1" id="new">
                         person
                     </span></a>
             </div>
@@ -40,12 +40,13 @@
         </div>
 
         <footer>
-            <div >
+            <div>
                 <i class="fa fa-twitter"></i>
                 <i class="fa fa-facebook"></i>
-                <a href="https://www.one-tab.com/page/gPCLa4TASCinNOgMbaDEaQ" target ="blank"><i style = "font-size: 0.9em" class="fa fa-users"></i></a>             
+                <a href="https://www.one-tab.com/page/gPCLa4TASCinNOgMbaDEaQ" target="blank"><i style="font-size: 0.9em"
+                        class="fa fa-users"></i></a>
             </div>
-            
+
             <p class="copyright"> nomo © 2021</p>
         </footer>
     </div>
