--- a/html/firstPageTest.html
+++ b/html/firstPageTest.html
@@ -37,13 +37,15 @@
                 </a>
             </div>
 
+            <div id="extraspace"></div>
+
         </div>
 
         <footer>
             <div>
                 <i class="fa fa-twitter"></i>
                 <i class="fa fa-facebook"></i>
-                <a href="https://www.one-tab.com/page/gPCLa4TASCinNOgMbaDEaQ" target="blank"><i style="font-size: 0.9em"
+                <a href="https://www.one-tab.com/page/gPCLa4TASCinNOgMbaDEaQ" target="blank"><i style="font-size: 0.8em"
                         class="fa fa-users"></i></a>
             </div>
 
