--- a/html/secondPageTest.html
+++ b/html/secondPageTest.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round">
     <link rel="stylesheet" href="../css/secondPage.css">
+
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <title>Category</title>
 </head>
 
@@ -62,7 +64,21 @@
             </a>
         </div>
 
+        <div id="extraspace"></div>
+
     </div>
+
+    <footer>
+        <div>
+            <i class="fa fa-twitter"></i>
+            <i class="fa fa-facebook"></i>
+            <a href="https://www.one-tab.com/page/gPCLa4TASCinNOgMbaDEaQ" target="blank"><i style="font-size: 0.8em"
+                    class="fa fa-users"></i></a>
+        </div>
+
+        <p class="copyright"> nomo © 2021</p>
+    </footer>
+
     <script src="../js/secondPage.js"></script>
 </body>
 
