added autofocus on chatinput.html

--- a/html/ChatInput.html
+++ b/html/ChatInput.html
@@ -39,7 +39,7 @@
     <div class="copybox">
       <div class="input-box">
         <!-- The text field -->
-        <textarea id="myInput"></textarea>
+        <textarea id="myInput" autofocus="autofocus"></textarea>
       </div>
 
       <div class="copybutton">
