--- a/html/secondPageTest.html
+++ b/html/secondPageTest.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round">
+    <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/secondPage.css">
     <title>Category</title>
 </head>
@@ -23,11 +24,15 @@
                 <a class="logo" href="./firstPageTest.html">nomo</a>
             </div>
             <div class="login">
-                <a href="profile.html">
-                    <span class="material-icons-round t1" id="new">
+                <a href="#">
+                    <span class="material-icons-round t1" id="new" onclick="showDropdown()">
                         person
                     </span>
                 </a>
+            </div>
+            <div id="profileDropDown" style="display: none">
+                <a href="profile.html"><button id="dropDownViewProfile"> View Profile</button></a>
+                <a href="loginPage.html"><button id="dropDownLogout"> Logout </button></a>
             </div>
         </div>
         <div id="headingDiv">
