Removed the red borders lol

--- a/html/ChatInput.html
+++ b/html/ChatInput.html
@@ -37,7 +37,11 @@
         <a class="logo" href="./firstPageTest.html">nomo</a>
       </div>
       <div class="login">
-        <a href="profile.html"> <span class="material-icons-round t1" id="new"> person </span></a>
+        <a href="#"> <span class="material-icons-round t1" id="new" onclick="showDropdown()"> person </span></a>
+      </div>
+      <div id="profileDropDown" style="display: none">
+        <a href="profile.html"><button id="dropDownViewProfile"> View Profile</button></a>
+        <a href="loginPage.html"><button id="dropDownLogout"> Logout </button></a>
       </div>
     </div>
     <div class="copybox">
@@ -53,7 +57,7 @@
       </div>
 
     </div>
-    
+
     <div id="extraspace"></div>
 
   </div>
