moved filters over to the right, and changed nomo to purple on page 2

--- a/html/ChatInput.html
+++ b/html/ChatInput.html
@@ -66,7 +66,7 @@
           class="fa fa-users"></i></a>
     </div>
 
-    <p class="copyright"> nomo © 2021</p>
+    <p> nomo © 2021</p>
   </footer>
 
 
