--- a/html/secondPageTest.html
+++ b/html/secondPageTest.html
@@ -81,7 +81,7 @@
                     class="fa fa-users"></i></a>
         </div>
 
-        <p class="copyright"> nomo © 2021</p>
+        <p> nomo © 2021</p>
     </footer>
 
     <script src="../js/secondPage.js"></script>
