fixed nav bar layout in page 3

--- a/html/thirdPageTest.html
+++ b/html/thirdPageTest.html
@@ -52,12 +52,11 @@
       </div>
     </div>
 
-      <div class="login">
+      <!-- <div class="login">
         <a href="profile.html">
           <span class="material-icons-round t1" id="new"> person </span>
         </a>
-      </div>
-    </div>
+      </div> -->
 
     <!-- HEADINGS & FILTER -->
     <div id="headingDiv">
