updated filter dropdown

--- a/html/ChatInput.html
+++ b/html/ChatInput.html
@@ -50,6 +50,14 @@
           <!-- The button used to copy the text -->
           <button onclick="myFunction()">copy to clipboard</button>
         </div>
+
+        <div class="buttons">
+          <a class="b1" href="secondPageTest.html?personal" onclick="personalSelected()"> Personal
+          </a>
+          <a class="b2" href="secondPageTest.html?business" onclick="businessSelected()"> Business
+          </a>
+      </div>
+
       </div>
     </div>
     <script src="/js/ChatInput.js"></script>
