--- a/html/firstPageTest.html
+++ b/html/firstPageTest.html
@@ -8,6 +8,10 @@
     <title>nomo</title>
     <link rel="stylesheet" href="../css/firstPage.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -22,10 +26,10 @@
 
         <div class="content">
             <div class="text t1">
-                effective replies for any situation, making declining stress-free
+                Effective replies for any situation, making declining stress-free
             </div>
             <div class="text t2">
-                what type of response do you need today?
+                What type of response do you need today?
             </div>
             <div class="buttons">
                 <a class="b1" href="secondPageTest.html?personal" onclick="personalSelected()"> Personal
@@ -35,6 +39,17 @@
             </div>
         </div>
     </div>
+
+    <footer class="footer-basic">
+        <ul class="list-inline">
+            <li class="list-inline-item"><a href="./main.html">Home</a></li>
+            <li class="list-inline-item"><a href="#">Features</a></li>
+            <li class="list-inline-item"><a href="#">FAQs</a></li>
+            <li class="list-inline-item"><a href="#">About</a></li>
+            <li class="list-inline-item"></li>
+        </ul>
+        <p class="copyright">nomo © 2021</p>
+    </footer>
 
 
     <script src="../js/firstPage.js"></script>
