--- a/html/secondPageTest.html
+++ b/html/secondPageTest.html
@@ -9,7 +9,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round">
     <link rel="stylesheet" href="../css/secondPage.css">
     <title>Category</title>
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+
+    <!--elaine-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Inter:wght@500&display=swap" rel="stylesheet">
 
 <body>
     <div class="container">
